k8s/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - longhorn.air-gap.demo
    secretName: longhorn-tls
  rules:
  - host: longhorn.air-gap.demo
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
